--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>INL LIBRARY</title>
+    <title>Inn</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/index.css">
@@ -150,7 +150,7 @@
     <br><br>
     <div class="footer">
     <footer>
-    &copy;Yokada
+    &copy;Zoey
     </footer>
     </div>
   </body>
