--- a/video.html
+++ b/video.html
@@ -47,14 +47,14 @@
 <div>
   <div class="boxmain">
     <div class="boxborder">
-      <div><video controls src="./videos/Millennium.mp4" type="video/mp4" id="Video1"></div>
+      <div><video controls src="./videos/Comma.mp4" type="video/mp4" id="Video2"></div>
     </div>
-      <div><center><h3 style="color:black;">Millennium</h3></center></div>
+      <div><center><h3 style="color:black;">Comma Project</h3></center></div>
   </div>
 
   <div class="boxnav"><em>
       <span>Synopsis:</span>
-      <span>Fanwork made in 2021.</span>
+      <span>A quick preview of my learning platform project 'Comma'.</span>
       <span><a href="index.html"><?php echo"&nbsp;&nbsp;"; ?>HOME</a></span>
   </div>
 </div>
